WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95421
Fix Chromium builds (Win and Mac)
https://bugs.webkit.org/show_bug.cgi?id=95421
Summary
Fix Chromium builds (Win and Mac)
Hironori Bono
Reported
2012-08-29 22:19:13 PDT
Fix Chromium builds (Win and Mac)
Attachments
Patch
(1.42 KB, patch)
2012-08-29 22:26 PDT
,
Hironori Bono
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hironori Bono
Comment 1
2012-08-29 22:26:04 PDT
Created
attachment 161402
[details]
Patch
WebKit Review Bot
Comment 2
2012-08-29 22:30:19 PDT
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
Hironori Bono
Comment 3
2012-08-29 22:50:07 PDT
Comment on
attachment 161402
[details]
Patch Clearing flags on attachment: 161402 Committed
r127103
: <
http://trac.webkit.org/changeset/127103
>
Hironori Bono
Comment 4
2012-08-29 22:50:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug