Fix Chromium builds (Win and Mac) https://bugs.webkit.org/show_bug.cgi?id=95421

Reviewed by James Robinson.

This change replaces 'class WebRect' with 'struct WebRect' to fix build breaks
on the "Chromium Mac Release" and the "Chromium Win Release" bot caused by
r127095.

* public/WebViewClient.h:
(WebKit):


Canonical link: https://commits.webkit.org/113274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127103 268f45cc-cd09-0410-ab3c-d52691b4dbfc